# clowcard

./: Cargo.toml  LICENSE  README.md
.github/workflows/: homebrew.yml  release.yml  showcase.yml
data/: cards.yaml
data/sharpen-stroke/: arrow.txt  big.txt  bubbles.txt  change.txt  cloud.txt  create.txt  dark.txt  dash.txt  dream.txt  earthy.txt  erase.txt  fight.txt  firey.txt  float.txt  flower.txt  fly.txt  freeze.txt  glow.txt  illusion.txt  jump.txt  libra.txt  light.txt  little.txt  lock.txt  loop.txt  maze.txt  mirror.txt  mist.txt  move.txt  nothing.txt  power.txt  rain.txt  return.txt  sand.txt  shadow.txt  shield.txt  shot.txt  silent.txt  sleep.txt  snow.txt  (+13 more)
src/: art.rs  card.rs  display.rs  main.rs
